--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,472 @@
 */
 
 .page {
+  background-color: var(--bg-color);
+  font-family: var(--main-font, sans-serif);
+  color: var(--main-color);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+.header {
+  font-family: var(--accent-font);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-block-start: 100px;
+  margin-block-end: 100px;
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+  
+}
+
+.header__title {
+  padding: 136px 120px 20px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-weight: 400;
+
+}
+
+.header__subtitle {
+  font-weight: 400;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  line-height: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 25px;
+  text-transform: uppercase;
+
+}
+
+.theme-menu__list {
+  max-width: 84px;
+  max-height: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  font-size: 14px;
+  line-height: 14px;
+  margin-left: 16px;
+  margin-block-end: 25px;
+
+}
+
+.theme-menu__button {
+  position: relative;
+  border: none;
+  font-weight: 400;
+  background-color: transparent;
+  cursor: pointer;
+  min-height: 14px;
+  padding: 0;
+  text-transform: uppercase;
+
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  left: -20px;
+  animation: move 0.5s infinite ease-in-out alternate;
+
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  background-color: var(--main-color);
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: left;
+
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+
+}
+
+.theme-menu__button:disabled {
+  cursor: default;
+  pointer-events: none;
+
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+.card__container {
+  background-color: var(--bg-color);
+  margin-block-end: 50px;
+  border: 2px solid var(--main-color);
+
+}
+
+.card__title {
+  padding: 5px 10px;
+  font-variation-settings: "wght" var(--font-weight-title);
+  font-size: 18px;
+  line-height: 21.78px;
+  border-block-end: 2px solid var(--main-color);
+
+}
+
+.image__container {
+  position: relative;
+  max-height: 696px;
+
+}
+
+.card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  aspect-ratio: 1 / 1;
+  display: block;
+
+}
+
+.image__label {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 1;
+  color: var(--main-color);
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  text-shadow: 0px 0px 1px var(--bg-color);
+  
+}
+
+@supports (
+  (text-stroke: 1px var(--label-color-stroke)) or
+    (-webkit-text-stroke: 1px var(--label-color-stroke))
+) {
+  .image__label {
+    -webkit-text-stroke: 1px var(--label-color-stroke);
+  }
+}
+
+.card__description {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  justify-content: center;
+  padding: 25px;
+  border-block-start: 2px solid var(--main-color);
+
+}
+
+.card__text {
+  font-variation-settings: "wght" var(--font-weight-text);
+  max-width: 646px;
+  font-size: 18px;
+  line-height: 21px;
+
+}
+
+.card__button {
+  display: flex;
+  gap: 6px;
+  justify-content: end;
+  margin-block-end: 25px;
+  margin-inline-end: 25px;
+  min-height: 38px;
+
+}
+
+.button {
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: var(--accent-font);
+  border: 2px solid var(--main-color);
+  font-weight: 400;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+
+}
+
+.button:focus {
+  outline: none;
+
+}
+
+.button:focus-visible {
+  box-shadow: 1px 1px var(--main-color);
+
+}
+
+.card__like-button {
+  min-width: 130px;
+  max-height: 38px;
+  line-height: 12.6px;
+  text-align: center;
+
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+  transition: transform 0.5s ease-in-out;
+
+}
+
+.button:hover::before {
+  transform: translateX(100%);
+
+}
+
+.button__text {
+  mix-blend-mode: difference;
+  color: var(--button-text-color);
+  
+}
+
+.card__icon-button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  height: 38px;
+
+}
+
+.card__icon-button:focus {
+  outline: none;
+
+}
+
+.card__icon-button:focus-visible {
+  box-shadow: none;
+  border: 2px solid var(--main-color);
+
+}
+
+.button__dialog-icon {
+  mix-blend-mode: difference;
+  color: var(--button-text-color);
+
+}
+
+.like-icon {
+  inline-size: 39px;
+  block-size: 36px;
+  cursor: pointer;
+
+}
+
+.sparks {
+  opacity: 0;
+
+}
+
+.button__dialog {
+  padding: 15.5px 21px;
+  background-color: var(--bg-color);
+  align-self: center;
+  display: flex;
+  gap: 3.5px;
+  align-items: center;
+  margin-block-end: 100px;
+
+}
+
+.button__dialog-icon {
+  width: 21px;
+  height: 21px;
+
+}
+
+.popup {
+  position: fixed;
+  inset: 0;
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+  padding: 28px;
+
+}
+
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+
+}
+
+.popup__content {
+  display: flex;
+  gap: 20px;
+
+}
+
+.popup::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);
+
+}
+
+.button__close {
+  padding: 10.5px 131px;
+
+}
+
+.popup__text {
+  color: var(--main-color);
+  font-weight: 400;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  max-width: 234px;
+  line-height: 21px;
+
+}
+
+.popup__icon {
+  width: 39px;
+  height: 39px;
+  color: var(--main-color);
+  align-self: center;
+
+}
+
+.card__image-brightness {
+  filter: brightness(130%);
+
+}
+
+.card__image-saturate {
+  filter: saturate(0.2);
+
+}
+
+.card__image-contrast {
+  filter: hue-rotate(-2deg) saturate(4) brightness(1) contrast(1.2);
+
+}
+
+.card__image-mix {
+  filter: hue-rotate(20deg) brightness(1.2) saturate(1);
+
+}
+
+.card__image-invert {
+  filter: invert(1) brightness(0.8);
+
+}
+
+.card__image-sepia {
+  filter: sepia(0.8) saturate(0.5);
+
+}
+
+.card__image-blur {
+  filter: blur(15px);
+
+}
+
+.card__image-color {
+  filter: hue-rotate(95deg) contrast(0.4) saturate(2) blur(1.5px);
+
+}
+
+
+@media (width <= 375px) {
+
+  .header__title {
+    padding: 120px 14px 20px;
+
+  }
+  
+  .card__container{
+    max-width: 375px;
+  }
+
+  .card__image {
+    width: 100%;
+    min-height: 100%;
+
+  }
+
+  .popup {
+    max-width: 341px;
+    padding: 28px 40px;
+
+  }
+
+  .button__close {
+    padding: 10.5px 114px;
+
+  }
+
+  .popup__text {
+    max-width: 198px;
+
+  }
+
+  .button__dialog {
+    flex-direction: column;
+
+  }
+
+  .button__dialog-icon {
+    width: 28px;
+    height: 28px;
+
+  }
+
+  .image__label {
+    right: 13px;
+
+  }
+
+  .card__text {
+    max-width: 317px;
+
+  }
+  
 }
