--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 
 .page {
   background-color: var(--bg-color);
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, fantasy, sans-serif);
   color: var(--main-color);
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -26,30 +26,33 @@
   align-items: center;
   background-image: var(--bg-image);
   background-attachment: fixed;
-  height: 100vh;
+  min-height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 
 }
 
 .header {
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy, sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-block-start: 100px;
   margin-block-end: 100px;
-  border: 2px solid var(--main-color);
+  margin-inline: auto;
+  outline: 2px solid var(--main-color);
   background-color: var(--bg-color);
-  
+  max-width: 700px;
+  padding: 136px 120.5px 25px;
 }
 
 .header__title {
-  padding: 136px 120px 20px;
+  margin-block-end: 20px;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-weight: 400;
+  text-align: center;
 
 }
 
@@ -64,15 +67,13 @@
 
 .theme-menu__list {
   max-width: 84px;
-  max-height: 70px;
   display: flex;
   flex-direction: column;
   gap: 14px;
   font-size: 14px;
   line-height: 14px;
-  margin-left: 16px;
-  margin-block-end: 25px;
-
+  margin-left: 18px;
+ 
 }
 
 .theme-menu__button {
@@ -84,7 +85,7 @@
   min-height: 14px;
   padding: 0;
   text-transform: uppercase;
-
+  transition: opacity 0.3s ease;
 }
 
 .theme-menu__button:disabled::before {
@@ -135,29 +136,33 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 696px;
+  margin-inline: auto;
 
 }
 
 .card__container {
   background-color: var(--bg-color);
-  margin-block-end: 50px;
-  border: 2px solid var(--main-color);
-
+  margin-block-end: 52px;
+  outline: 2px solid var(--main-color);
 }
 
 .card__title {
-  padding: 5px 10px;
+  padding: 4px 10px;
   font-variation-settings: "wght" var(--font-weight-title);
   font-size: 18px;
   line-height: 21.78px;
   border-block-end: 2px solid var(--main-color);
+  border-block-start: 2px solid var(--main-color);
 
 }
 
 .image__container {
   position: relative;
-  max-height: 696px;
-
+  max-height: 698px;
+  overflow: hidden;
+  border-block-start: 2px solid var(--main-color);
+  border-block-end: 2px solid var(--main-color);
 }
 
 .card__image {
@@ -166,12 +171,11 @@
   object-fit: cover;
   object-position: center;
   aspect-ratio: 1 / 1;
-  display: block;
-
+  display: block; 
 }
 
 .image__label {
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -192,13 +196,14 @@
 ) {
   .image__label {
     -webkit-text-stroke: 1px var(--label-color-stroke);
+    text-shadow: none;
   }
 }
 
 .card__description {
   display: flex;
   flex-direction: column;
-  gap: 28px;
+  gap: 27px;
   justify-content: center;
   padding: 25px;
   border-block-start: 2px solid var(--main-color);
@@ -215,10 +220,10 @@
 
 .card__button {
   display: flex;
-  gap: 6px;
+  gap: 8px;
   justify-content: end;
-  margin-block-end: 25px;
-  margin-inline-end: 25px;
+  padding-inline-end: 25px;
+  padding-block-end: 25px;
   min-height: 38px;
 
 }
@@ -227,7 +232,7 @@
   background-color: transparent;
   cursor: pointer;
   font-size: 14px;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy, sans-serif;
   border: 2px solid var(--main-color);
   font-weight: 400;
   transition: box-shadow 0.3s ease;
@@ -263,7 +268,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--main-color);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out ;
 
 }
 
@@ -283,6 +288,7 @@
   border: none;
   background-color: transparent;
   height: 38px;
+  transition: border 0.3s ease;
 
 }
 
@@ -294,7 +300,7 @@
 .card__icon-button:focus-visible {
   box-shadow: none;
   border: 2px solid var(--main-color);
-
+ 
 }
 
 .button__dialog-icon {
@@ -317,11 +323,11 @@
 }
 
 .button__dialog {
-  padding: 15.5px 21px;
+  padding: 15.5px 20.5px;
   background-color: var(--bg-color);
   align-self: center;
   display: flex;
-  gap: 3.5px;
+  gap: 8px;
   align-items: center;
   margin-block-end: 100px;
 
@@ -333,20 +339,14 @@
   border: 2px solid var(--main-color);
   background-color: var(--bg-color);
   padding: 28px;
-
+  text-transform: uppercase;
 }
 
-.popup__form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 30px;
-
-}
 
 .popup__content {
   display: flex;
   gap: 20px;
+  margin-block-end: 30px;
 
 }
 
@@ -357,13 +357,13 @@
 
 .button__close {
   padding: 10.5px 131px;
-
+  text-transform: uppercase;
 }
 
 .popup__text {
   color: var(--main-color);
   font-weight: 400;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy, sans-serif;
   font-size: 14px;
   max-width: 234px;
   line-height: 21px;
@@ -419,58 +419,54 @@
 }
 
 
-@media (width <= 375px) {
-
-  .header__title {
-    padding: 120px 14px 20px;
-
-  }
+@media (width <= 700px) {
+.header {
+  padding: 120px 14px 25px;
   
-  .card__container {
-    max-width: 375px;
+}
 
-  }
+.button__dialog {
+  padding: 15.5px 18.5px;
+  flex-direction: column;
+}
 
-  .card__image {
-    width: 100%;
-    min-height: 100%;
+.cards{
+  max-width: clamp(23.1875rem, 20.7356rem + 10.4615vw, 25.3125rem);
+}
 
-  }
+.button__dialog {
+    padding: 15.5px 18.5px;
+}
 
-  .popup {
-    max-width: 341px;
-    padding: 28px 40px;
+.popup { 
+  max-width: 341px;
+  padding: 28px 40px;
 
-  }
+}
 
-  .button__close {
-    padding: 10.5px 114px;
+.button__close {
+  padding: 10.5px 114px;
 
-  }
+}
 
-  .popup__text {
-    max-width: 198px;
+.popup__text {
+  max-width: 198px;
 
-  }
+}
 
-  .button__dialog {
-    flex-direction: column;
+.button__dialog-icon {
+  width: 28px;
+  height: 28px;
 
-  }
+}
 
-  .button__dialog-icon {
-    width: 28px;
-    height: 28px;
+.image__label {
+  right: 13px;
 
-  }
+}
 
-  .image__label {
-    right: 13px;
-
-  }
-
-  .card__text {
-    max-width: 317px;
+.card__text {
+  max-width: 321px;
 
   }
   
