--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,61 +5,88 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-
-
-:root.theme-dark {   
+:root.theme-dark {
   --font-weight-title: 785;
-  --font-weight-text:465;
-  --main-color:#00CC14;
-  --bg-color:#000000;
-  --bg-image:  repeating-linear-gradient( to right, #000, #000 2px, transparent 2px, transparent 4px),
-  repeating-linear-gradient(to bottom, #000, #000 2px, transparent 2px, transparent 4px),
-  linear-gradient( to bottom,#007f0c 0.01%, #004306 100%);
-  --heart-contour-color: #00CC14;
+  --font-weight-text: 465;
+  --main-color: #00cc14;
+  --bg-color: #000000;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306 100%);
+  --heart-contour-color: #00cc14;
   --heart-sparks-color: red;
   --heart-main-color: red;
-  --heart-core-color:#00CC14;
-  --label-color-stroke:#000000;
-  --button-text-color: #00CC14;
-
-}  
+  --heart-core-color: #00cc14;
+  --label-color-stroke: #000000;
+  --button-text-color: #00cc14;
+}
 
 @media (prefers-color-scheme: dark) {
-  :root {   
-      --font-weight-title: 785;
-      --font-weight-text:465;
-      --main-color:#00CC14;
-      --bg-color:#000000;
-      --bg-image:  repeating-linear-gradient(to right,#000, #000 2px, transparent 2px, transparent 4px),
-      repeating-linear-gradient(to bottom,#000, #000 2px, transparent 2px, transparent 4px),
+  :root {
+    --font-weight-title: 785;
+    --font-weight-text: 465;
+    --main-color: #00cc14;
+    --bg-color: #000000;
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        to bottom,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
       linear-gradient(to bottom, #007f0c 0.01%, #004306 100%);
-      --heart-contour-color: #00CC14;
-       --heart-sparks-color: red;
-       --heart-main-color: red;
-       --heart-core-color:#00CC14;
-       --label-color-stroke:#000000;
-       --button-text-color: #00CC14;
-    }
-
-  } 
-
-  :root.theme-light {
-    --font-weight-title: 700;
-    --font-weight-text:400;
-    --main-color:#000000;
-    --bg-color:#FFFFFF;
-    --bg-image:
-    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-    repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-    linear-gradient(to bottom,#e7e7e7 0.01%,#1a1a1a 100%);
-    --heart-contour-color:#000000;
+    --heart-contour-color: #00cc14;
     --heart-sparks-color: red;
-    --heart-main-color:red;
-    --heart-core-color:#000000;
-    --label-color-stroke:#FFFFFF;
-    --button-text-color:#FFFFFF;
-    
+    --heart-main-color: red;
+    --heart-core-color: #00cc14;
+    --label-color-stroke: #000000;
+    --button-text-color: #00cc14;
   }
-  
-  
-  
+}
+
+:root.theme-light {
+  --font-weight-title: 700;
+  --font-weight-text: 400;
+  --main-color: #000000;
+  --bg-color: #ffffff;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+  --heart-contour-color: #000000;
+  --heart-sparks-color: red;
+  --heart-main-color: red;
+  --heart-core-color: #000000;
+  --label-color-stroke: #ffffff;
+  --button-text-color: #ffffff;
+}
